# VeCo_upgraded

./: .gitignore  KI_PROGRAMMIER_LEITFADEN.md  README.md  pyproject.toml  requirements.txt  setup_venv.ps1
test/: minimal_example.py  query_llm.py  veco_test.py
veco_ai/: __init__.py  __main__.py  veco_ai.py  veco_server.py
